# resippies.com

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.cargo/: config.toml
db/: .gitignore
entities/: Cargo.toml  Makefile.toml
entities/src/: cookbook.rs  cookbook_contributor.rs  cookbook_contributors.rs  cookbook_recipe.rs  ingredient.rs  lib.rs  prelude.rs  recipe.rs  recipe_contributor.rs  recipe_contributors.rs  role.rs  step.rs  theme.rs  user.rs  visibility.rs
entities/tests/: test.rs
migration/: Cargo.toml  Makefile.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230528_000001_create_table.rs  m20230611_042651_anonymous_user.rs
migrations/: 20230106231215_init.down.sql  20230106231215_init.up.sql  20230325171544_demodata.up.sql
pwgen/: Cargo.toml
pwgen/src/: main.rs
schema/: schema.sql
service/: Cargo.toml
service/src/: cookbook.rs  lib.rs  recipe.rs  user.rs
site/: Cargo.toml  build.rs  tailwind.config.js
site/binaries/plugins/forms/: index.js  mini-svg-data-uri.js
site/src/: auth.rs  config.rs  db.rs  error.rs  layout.rs  lib.rs  render.rs  secret.rs  state.rs  templates.rs
site/src/components/: mod.rs
site/src/pages/: layout.rs
site/src/routes/: index.rs  login.rs  logout.rs  mod.rs  register.rs
site/src/traits/: mod.rs
site/static/: style.css  style.min.css
site/templates/: base.html  index.html
src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  password.rs  pattern.rs  render.rs  static_files.rs  templates.rs  uuid.rs
src/entities/: cookbooks.rs  cookbooks_contributors.rs  cookbooks_recipes.rs  identities.rs  ingredients.rs  items.rs  mod.rs  prelude.rs  recipes.rs  recipes_contributors.rs  recipes_ingredients.rs  recipes_steps.rs  steps.rs
src/entity/: cookbook.rs  identity.rs  ingredient.rs  item.rs  mod.rs  recipe.rs  step.rs
src/handlers/: auth.rs  cookbook.rs  identity.rs  index.rs  login.rs  mod.rs  recipe.rs  register.rs
src/queries/: identity.rs
static/: resippies.css
templates/: base.html  cookbook.html  create_cookbook.html  create_recipe.html  delete_recipe.html  edit_recipe.html  identity.html  index.html  login.html  not_found.html  recipe.html  recipe_not_found.html  register.html
test_data/: 20230325171544_demodata.down.sql
util/: Cargo.toml
util/src/: lib.rs
uuidgen/: Cargo.toml
uuidgen/src/: main.rs
