[package]
name = "resippies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
axum-extra = "0.7.4"
axum-login = "0.5.0"
axum-macros = "0.3.7"
axum-template = "0.16.0"
dotenvy_macro = "0.15.7"
lazy_static = "1.4.0"
pwhash = "1.0.0"
rand = "0.8.5"
regex = "1.8.3"
sea-orm = { version = "0.11.3", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-time",
    "with-uuid",
    "mock",
    "debug-print",
] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.3.3"
