[workspace]
members = ["site", "entities", "util", "migration"]

[workspace.dependencies]
entities = { path = "./entities" }
sea-orm = { version = "0.11.3", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-time",
    "with-uuid",
    "mock",
    "debug-print",
] }
sea-orm-migration = { version = "0.11.3", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.28.2", features = ["full"] }
