[workspace]
members = ["site", "entities", "util", "migration", "service"]

[workspace.dependencies]
entities = { path = "./entities" }
sea-orm = { version = "0.12.0-rc.2", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-time",
    "with-uuid",
    "debug-print",
    "sea-orm-internal",
] }
sea-orm-migration = { version = "0.12.0-rc.2", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.28.2", features = ["full"] }
