[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
