[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
axum_session = { version = "0.2.3", features = ["sqlite-rustls"] }
entities = { workspace = true }
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
tokio = { workspace = true, features = ["full"] }
