[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwhash = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v7"] }
